k8s.yaml
# ms-patient deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-patient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-patient
  template:
    metadata:
      labels:
        app: ms-patient
    spec:
      containers:
      - name: ms-patient-container
        image: ms-patient-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
# ms-ordonnance deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ordonnance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-ordonnance
  template:
    metadata:
      labels:
        app: ms-ordonnance
    spec:
      containers:
      - name: ms-ordonnance-container
        image: ms-ordonnance-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
---
# ms-remboursement deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-remboursement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-remboursement
  template:
    metadata:
      labels:
        app: ms-remboursement
    spec:
      containers:
      - name: ms-remboursement-container
        image: ms-remboursement-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
---
# services
apiVersion: v1
kind: Service
metadata:
  name: ms-patient
spec:
  selector:
    app: ms-patient
  ports:
  - port: 8081
    targetPort: 8081
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ms-ordonnance
spec:
  selector:
    app: ms-ordonnance
  ports:
  - port: 8082
    targetPort: 8082
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ms-remboursement
spec:
  selector:
    app: ms-remboursement
  ports:
  - port: 8083
    targetPort: 8083
  type: NodePort
